[metadata]
name = tumble
version = 1.0.0
author = Alagyn
description = A simple tabular data printer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alagyn/Tumble
project_urls =
    Bug Tracker = https://github.com/alagyn/Tumble/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Typing :: Typed
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules


[options]
py_modules=
    tumble
python_requires = >=3.6
